[gd_scene load_steps=5 format=3 uid="uid://sihy1oiiv6bj"]

[ext_resource type="Script" path="res://hotbar.gd" id="1_btnhd"]
[ext_resource type="Texture2D" uid="uid://bcjh7vdw2tong" path="res://assets/sword.png" id="1_ugqnj"]
[ext_resource type="Texture2D" uid="uid://b8hv7wpsfed5a" path="res://assets/bow.png" id="2_urx0p"]
[ext_resource type="Texture2D" uid="uid://2xyc07n7ud6f" path="res://assets/shieldbig.png" id="4_ayf4g"]

[node name="hotbar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -3.0
offset_right = 4.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_btnhd")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_top = 50.0
offset_right = 64.0
offset_bottom = 90.0
grow_horizontal = 2
columns = 10

[node name="Button" type="Button" parent="GridContainer"]
layout_mode = 2
focus_mode = 1
icon = ExtResource("1_ugqnj")

[node name="Button2" type="Button" parent="GridContainer"]
layout_mode = 2
focus_mode = 1
icon = ExtResource("2_urx0p")

[node name="Button3" type="Button" parent="GridContainer"]
layout_mode = 2
focus_mode = 1
keep_pressed_outside = true
icon = ExtResource("4_ayf4g")

[connection signal="pressed" from="GridContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="GridContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="GridContainer/Button3" to="." method="_on_button_3_pressed"]
